src/test/ui/error-codes/E0585.stderr
error[E0585]: found a documentation comment that doesn't document anything
  --> $DIR/E0585.rs:2:5
   |
LL |     /// Hello! I'm useless...
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: doc comments must come before what they document, maybe a comment was intended with `//`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0585`.
