src/test/ui/error-codes/E0585.rs
fn main() {
    /// Hello! I'm useless...
    //~^ ERROR E0585
}
